# hermes-research

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
src/research/: __init__.py  assimilator.py  engine.py  fetchers.py  mcp_server.py  memory.py  search.py  skills_registry.py  summarizer.py  topic_similarity.py
tests/: test_research.py
